# libskk

./: README.md  libskk.toml.in  meson.build  meson_options.txt
.github/workflows/: vala.yml
libskk/: meson.build
tests/: meson.build
tools/: meson.build
valadoc/: index.html
valadoc/libskk/: Skk.Candidate.Candidate.html  Skk.Candidate.annotation.html  Skk.Candidate.html  Skk.Candidate.midasi.html  Skk.Candidate.okuri.html  Skk.Candidate.output.html  Skk.Candidate.text.html  Skk.Candidate.to_string.html  Skk.CandidateList.@get.html  Skk.CandidateList.CandidateList.html  Skk.CandidateList.cursor_down.html  Skk.CandidateList.cursor_pos.html  Skk.CandidateList.cursor_up.html  Skk.CandidateList.get_page_start_cursor_pos.html  Skk.CandidateList.html  Skk.CandidateList.next.html  Skk.CandidateList.page_down.html  Skk.CandidateList.page_size.html  Skk.CandidateList.page_start.html  Skk.CandidateList.page_up.html  Skk.CandidateList.page_visible.html  Skk.CandidateList.populated.html  Skk.CandidateList.previous.html  Skk.CandidateList.select.html  Skk.CandidateList.select_at.html  Skk.CandidateList.selected.html  Skk.CandidateList.size.html  Skk.CdbDict.CdbDict.html  Skk.CdbDict.complete.html  Skk.CdbDict.html  Skk.CdbDict.lookup.html  Skk.CdbDict.read_only.html  Skk.CdbDict.reload.html  Skk.Context.Context.html  Skk.Context.add_dictionary.html  Skk.Context.auto_start_henkan_keywords.html  Skk.Context.candidates.html  Skk.Context.clear_output.html  Skk.Context.delete_surrounding_text.html  Skk.Context.dictionaries.html  (+2235 more)
